--- a/src/meson.build
+++ b/src/meson.build
@@ -5,8 +5,8 @@ configure_file(output: 'config.h',
 
 snapd_desktop_integration = executable(
   'snapd-desktop-integration',
-  'main.c', 'sdi-refresh-dialog.c', 'sdi-refresh-monitor.c', 'sdi-theme-monitor.c',
-  resources, gdbus_src,login_src, login_session_src,
+  'main.c', 'sdi-apparmor-prompt-agent.c', 'sdi-apparmor-prompt-dialog.c', 'sdi-refresh-dialog.c', 'sdi-refresh-monitor.c', 'sdi-theme-monitor.c',
+  resources, gdbus_src,login_src, login_session_src, prompt_agent_src, app_armor_prompt_src,
   dependencies: [gtk_dep, snapd_glib_dep, libnotify_dep],
   install: true,
   link_args: ['-rdynamic'],
